--- a/index.html
+++ b/index.html
@@ -1,1 +1,32 @@
-Hello World!
+
+<html>
+    <head>
+      <link rel="stylesheet" href="/static/style.css">
+      <meta charset="utf-8">
+      <title>justgloz everywhere </title>
+    </head>
+    <body>
+    <div id="menu">
+    <span class="title">Patrick Collison</span>
+    <ul>
+      <li>About</li>
+      <li>Bookshelf</li>
+
+    </ul>
+    </div>
+    <div id="left">&nbsp;</div>
+    <div id="content">
+    
+    </div>
+    <!-- <script type="text/javascript">
+      var _gaq = _gaq || [];
+      _gaq.push(['_setAccount', 'UA-2393307-1']);
+      _gaq.push(['_trackPageview']);
+      (function() {
+        var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+      })();
+    </script> -->
+    </body>
+    </html>
