--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
     </head>
     <body>
     <div id="menu">
-    <span class="title">Patrick Collison</span>
+    <span class="title">Gloria Zhang</span>
     <ul>
-      <li>About</li>
-      <li>Bookshelf</li>
+        <li><a href="">About</a></li>
+        <li><a href="">Advice</a></li>
 
     </ul>
     </div>
-    <div id="left">&nbsp;</div>
+    <div id="right">&nbsp;</div>
     <div id="content">
     
     </div>
