--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
       <link rel="stylesheet" href="/static/style.css">
       <meta charset="utf-8">
       <title>justgloz everywhere </title>
+      <style>
+        body {
+            text-align: right;
+            margin: 0;
+            padding: 0;
+        }
+        </style>
     </head>
     <body>
     <div id="menu">
