--- a/index.html
+++ b/index.html
@@ -1,39 +1,58 @@
-
-<html>
-    <head>
-      <link rel="stylesheet" href="/static/style.css">
-      <meta charset="utf-8">
-      <title>justgloz everywhere </title>
-      <style>
-        body {
-            text-align: right;
-            margin: 5;
-            padding: 5;
-        }
-        </style>
-    </head>
-    <body>
-    <div id="menu">
-    <span class="title">Gloria Zhang</span>
-    <ul>
-        <li><a href="">About</a></li>
-        <li><a href="">Advice</a></li>
-
-    </ul>
-    </div>
-    <div id="right">&nbsp;</div>
-    <div id="content">
-    
-    </div>
-    <!-- <script type="text/javascript">
-      var _gaq = _gaq || [];
-      _gaq.push(['_setAccount', 'UA-2393307-1']);
-      _gaq.push(['_trackPageview']);
-      (function() {
-        var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-      })();
-    </script> -->
-    </body>
-    </html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Gloria Zhang</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+      background-color: white;
+      color: black;
+      display: flex;
+      justify-content: flex-end;
+      align-items: center;
+      height: 100vh;
+    }
+    .content {
+      text-align: right;
+      margin-right: 20px;
+    }
+    .content h1 {
+      margin: 0 0 20px;
+    }
+    .content a {
+      display: block;
+      color: blue;
+      text-decoration: none;
+      margin: 5px 0;
+    }
+    .content a:hover {
+      text-decoration: underline;
+    }
+  </style>
+</head>
+<body>
+  <div class="content">
+    <h1>Gloria Zhang</h1>
+    <a href="#">About</a>
+    <a href="#">Advice</a>
+    <a href="#">Blog</a>
+    <a href="#">Bookshelf</a>
+    <a href="#">Culture</a>
+    <a href="#">Fast</a>
+    <a href="#">Growth</a>
+    <a href="#">Labs</a>
+    <a href="#">Links</a>
+    <a href="#">People</a>
+    <a href="#">Pollution</a>
+    <a href="#">Progress</a>
+    <a href="#">Questions</a>
+    <a href="#">Solar</a>
+    <a href="#">SV history</a>
+    <a href="#">Travel</a>
+  </div>
+</body>
+</html>
