--- a/index.html
+++ b/index.html
@@ -5,7 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Gloria Zhang</title>
   <style>
-    body {
+        body {
+            text-align: right;
+            margin: 5;
+            padding: 5;
+        }
+    /* body {
       font-family: Arial, sans-serif;
       margin: 0;
       padding: 0;
@@ -31,7 +36,7 @@
     }
     .content a:hover {
       text-decoration: underline;
-    }
+    } */
   </style>
 </head>
 <body>
