--- a/index.html
+++ b/index.html
@@ -1,25 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/static/style.css">
+    <meta charset="utf-8">
+    <title>justgloz everywhere </title>
+  <!-- <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
   <title>Gloria Zhang</title>
   <style>
-        body {
-            text-align: right;
-            margin: 5;
-            padding: 5;
-        }
-    /* body {
-      font-family: Arial, sans-serif;
-      margin: 0;
-      padding: 0;
+    body {
+      margin: 6;
+      padding: 6;
       background-color: white;
       color: black;
       display: flex;
       justify-content: flex-end;
-      align-items: center;
-      height: 100vh;
+      /* align-items: center;
+      height: 100vh; */
     }
     .content {
       text-align: right;
@@ -36,11 +33,11 @@
     }
     .content a:hover {
       text-decoration: underline;
-    } */
+    }
   </style>
 </head>
 <body>
-  <div class="content">
+  <div class="menu">
     <h1>Gloria Zhang</h1>
     <a href="#">About</a>
     <a href="#">Advice</a>
