--- a/index.html
+++ b/index.html
@@ -1,46 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="/static/style.css">
-    <meta charset="utf-8">
-    <title>justgloz everywhere </title>
-  <!-- <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
-  <title>Gloria Zhang</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Home - Gloria Zhang</title>
   <style>
     body {
-      margin: 6;
-      padding: 6;
+      font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+      margin: 10;
+      padding: 10;
       background-color: white;
       color: black;
       display: flex;
       justify-content: flex-end;
-      /* align-items: center;
-      height: 100vh; */
+      align-items: top;
+      height: 100vh;
     }
     .content {
       text-align: right;
       margin-right: 20px;
     }
-    .content h1 {
-      margin: 0 0 20px;
-    }
     .content a {
       display: block;
-      color: blue;
-      text-decoration: none;
-      margin: 5px 0;
-    }
-    .content a:hover {
+      /* color: blue; */
       text-decoration: underline;
+      /* margin: 5px 0; */
     }
+    /* .content a:hover {
+      text-decoration: underline;
+    } */
   </style>
 </head>
 <body>
-  <div class="menu">
-    <h1>Gloria Zhang</h1>
+  <div class="content">
+    <span class="title">Gloria Zhang</span>
     <a href="#">About</a>
-    <a href="#">Advice</a>
     <a href="#">Blog</a>
     <a href="#">Bookshelf</a>
     <a href="#">Culture</a>
@@ -53,7 +47,6 @@
     <a href="#">Progress</a>
     <a href="#">Questions</a>
     <a href="#">Solar</a>
-    <a href="#">SV history</a>
     <a href="#">Travel</a>
   </div>
 </body>
