--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     }
     .content a {
       display: block;
-      /* color: blue; */
+      color: blue;
       text-decoration: underline;
       /* margin: 5px 0; */
     }
