--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     .content {
       text-align: right;
       margin-right: 20px;
+      margin-top: 20px;
     }
     .content a {
       display: block;
